<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bé nhận biết con vật</string>
    <string name="action_settings">Settings</string>
    <string name="bubble">Bubble</string>
    <string name="background">Background</string>
    <string name="N0">0</string>
    <string name="time">Thời gian</string>
    <string name="cat">Cat</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="timeMode">Chế độ chơi Thời gian</string>
    <string name="countMode">Chế độ chơi Nhiệm Vụ</string>
    <string name="hard">Khó</string>
    <string name="medium">Bình Thường</string>
    <string name="easy">Dễ</string>
    <string name="enableSound">Bật Tiếng</string>
    <string name="disableSound">Tắt Tiếng</string>
    <string name="soundOnOff">Bật / Tắt Tiếng</string>
    <string name="Restart">Chơi lại</string>
    <string name="quitGame">Thoát Trò Chơi</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="number">X</string>
    <string name="total">Tổng điểm: </string>
    <string name="MainMenu">Màn hình chính</string>
    <string name="Bonus">Điểm thưởng: </string>
    <string name="miss">Trượt</string>
    <string name="right">Đúng +1</string>
    <string name="wrong">Sai -1</string>
    <string name="miniBonus">Điểm thưởng +3</string>
    <string name="extraBonus">Điểm thưởng +10</string>
    <string name="fast">Bạn rất nhanh nhẹn</string>
    <string name="slow">Bạn hãy nhanh tay hơn nữa nhé</string>

    <string-array name="difficult">
        <item>Dễ</item>
        <item>Bình Thường</item>
        <item>Khó</item>
    </string-array>

</resources>